--- a/scheduler-frontend-code/package.json
+++ b/scheduler-frontend-code/package.json
@@ -17,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "heroku-prebuild": "npm install -g serve",
+    "devstart": "react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
